codepkg/objects/Care_Instruction_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CareInstructLang1__c</fullName>
        <label>CareInstructLang1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CareInstructLang2__c</fullName>
        <label>CareInstructLang2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CareInstructLang3__c</fullName>
        <label>CareInstructLang3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Care_Code_Id__c</fullName>
        <displayFormat>Care-{00000}</displayFormat>
        <label>Care Code Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Care_Symbol__c</fullName>
        <label>Care Symbol</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carecode__c</fullName>
        <label>Carecode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Care Instruction Details</relationshipLabel>
        <relationshipName>Care_Instruction_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Care Instruction Details</relationshipLabel>
        <relationshipName>Care_Instruction_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symbol_Image__c</fullName>
        <label>Symbol Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wash_Instruction_Group__c</fullName>
        <label>Wash Instruction Group</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>symbol_image_url__c</fullName>
        <label>symbol image url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Care Instruction Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Care_Code_Id__c</columns>
        <columns>NAME</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Product__c</columns>
        <columns>Carecode__c</columns>
        <columns>Wash_Instruction_Group__c</columns>
        <columns>Description__c</columns>
        <columns>Care_Symbol__c</columns>
        <columns>Symbol_Image__c</columns>
        <columns>CareInstructLang1__c</columns>
        <columns>CareInstructLang2__c</columns>
        <columns>CareInstructLang3__c</columns>
        <columns>CareInstructLang4__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CareLabelRetailer</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Carecode__c</columns>
        <columns>Wash_Instruction_Group__c</columns>
        <columns>Description__c</columns>
        <columns>Care_Symbol__c</columns>
        <columns>Symbol_Image__c</columns>
        <columns>CareInstructLang1__c</columns>
        <columns>CareInstructLang2__c</columns>
        <columns>CareInstructLang3__c</columns>
        <columns>CareInstructLang4__c</columns>
        <columns>CareInstructLang5__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>demo</value>
        </filters>
        <label>_CareLabelRetailer</label>
    </listViews>
    <nameField>
        <label>Care Instructional Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Instruction Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>